--- a/jenkinsfile
+++ b/jenkinsfile
@@ -7,6 +7,7 @@ pipeline {
                 sh '''
                 pwd
                 echo "Hi Destiny"
+                echo "I am enjoying groovy"
                 echo "Groovy Baby"
                 echo "Inside shell block"
                 '''
